Time: 1 ms (86.61%), Space: 44.1 MB (57.75%) - LeetHub